# zodiac_new

./: .gitignore  .vimrc  CMakeLists.txt  LICENSE  README.md  TODO  create_linux_build.sh  psdevenv.ps1  run_all_tests.sh  zodiac_llvm_10.nix  zodiac_llvm_9.nix
.fossil-settings/: ignore-glob
.github/workflows/: build.yml  cmake.yml
include/zodiac/: allocator.h  array.h  array_ref.h  ast.h  atom.h  bc.h  bucket_array.h  build_data.h  builtin.h  bytecode.h  c_allocator.h  command_line_parser.h  common.h  const_interpreter.h  ffi.h  file_pos.h  hash_table.h  interpreter.h  lexer.h  llvm_builder.h  microsoft_craziness.h  operator.h  os.h  os_linux.h  os_windows.h  parse_tree_node.h  parser.h  queue.h  resolver.h  scope.h  stack.h  string_builder.h  struct_predecls.h  temp_allocator.h  token.h  token_stream.h  zodiac_error.h  zodiac_string.h
modules/: entry.zdc  math.zdc  os.zdc  std.zdc  structs.zdc  windows.zdc
source/: allocator.cpp  ast.cpp  atom.cpp  bc.cpp  bucket_array.cpp  build_data.cpp  builtin.cpp  bytecode.cpp  c_allocator.cpp  command_line_parser.cpp  common.cpp  const_interpreter.cpp  ffi.cpp  file_pos.cpp  hash_table.cpp  interpreter.cpp  lexer.cpp  llvm_builder.cpp  main.cpp  operator.cpp  os.cpp  os_linux.cpp  os_windows.cpp  parse_tree_node.cpp  parser.cpp  resolver.cpp  scope.cpp  stack.cpp  string_builder.cpp  struct_predecls.cpp  temp_allocator.cpp  token.cpp  token_stream.cpp  zodiac_error.cpp  zodiac_string.cpp
tests/: basics.zdc  bug_01.zdc  c_function_pointer_test.zdc  callback_perf_test.zdc  constants_in_structs.zdc  entry.zdc  enum_test.zdc  first.zdc  float_test.zdc  for_test.zdc  foreign_test.zdc  fork_test.zdc  function_pointer_test.zdc  global_array_test.zdc  indirect_recursion.zdc  math.zdc  multiplatform.zdc  nested_functions.zdc  offsetof_test.zdc  opassign_test.zdc  recursive_functions.zdc  recursive_structs.zdc  redeclaration_test.zdc  rundirective.zdc  sizeof_test.zdc  std.zdc  struct_assignment.zdc  struct_using.zdc  switch_range_test.zdc  switch_test.zdc  test.zdc  union_test.zdc  windows.zdc  windows_test.zdc
traces/bytecode_callback_handling/: calling_bc_pointer_x_1000_hash_check.tracy  calling_bc_pointer_x_1000_unoptimized.tracy  calling_c_pointer_x_1000_hash_check.tracy  calling_c_pointer_x_1000_unoptimized.tracy
